@@ -1,0 +1,3 @@
+fullServerURL="http://localhost/jcr13/castleServer/server.php"
+
+wget -q -O - "$fullServerURL?action=check_for_flush"
